--- a/views/space.ejs
+++ b/views/space.ejs
@@ -486,17 +486,32 @@
             const sepiaEffect = new PP.SepiaEffect();
             const vignetteEffect = new PP.VignetteEffect();
 
-            noiseEffect.blendMode.opacity.value = 0.6;
-            sepiaEffect.blendMode.opacity.value = 0.3;
+const outlineEffect = new PP.OutlineEffect(scene, camera, {
+    blendFunction: 16,
+    edgeStrength: 5,
+    pulseSpeed: 0.0,
+    resolution: 0.05,
+    visibleEdgeColor: 0xffffff,
+    hiddenEdgeColor: 0x22090a,
+    blur: false,
+    xRay: true,
+    opacity: 1
+});
 
-            const renderPass = new PP.RenderPass(scene, camera);
-            const effectPass = new PP.EffectPass(camera,
-                smaaEffect, noiseEffect, sepiaEffect, vignetteEffect);
+smaaEffect.colorEdgesMaterial.setEdgeDetectionThreshold(0.05);
+noiseEffect.blendMode.opacity.value = 0.6;
+sepiaEffect.blendMode.opacity.value = 0.3;
 
-            effectPass.renderToScreen = true;
+let here = document.querySelector('#here').object3D
+outlineEffect.setSelection(here.children);
 
-            composer.addPass(renderPass);
-            composer.addPass(effectPass);
+const renderPass = new PP.RenderPass(scene, camera);
+const effectPass = new PP.EffectPass(camera, outlineEffect,
+    smaaEffect,noiseEffect, sepiaEffect, vignetteEffect);
+
+effectPass.renderToScreen = true;
+composer.addPass(renderPass);
+composer.addPass(effectPass);
 
             // Hijack the render method.
             let calledByComposer = false;
@@ -508,14 +523,15 @@
                     render.apply(renderer, arguments);
 
                 } else {
-
                     calledByComposer = true;
                     composer.render(clock.getDelta());
+
                     calledByComposer = false;
 
                 }
-
             };
+
+
 
         },
 
