--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,14 +20,14 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
-        <script src="/bundle.js" ></script>
-        <link href="/bundle.css" rel="stylesheet" />
+        <script src="/main.js" ></script>
+        <link href="/main.css" rel="stylesheet" />
         <title><%= title %></title>
     </head>
     <body>
 
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-white justify-content-between">
-        <a class="navbar-brand" >
+        <a class="navbar-brand " >
             <img  id='logo' src="/images/W-1100x1100.png" width="30" height="30" class="d-inline-block align-top" alt="">
             DWXR
         </a>
